# ffmpeg-toy

./: CMakeLists.txt  FFFileWriter.h  FileWriter.h  MediaBuffer.h  README.md  audio_chn0.pcm  gitmain.c  main.c  main.cpp  remux.c  remuxing.c  transcoding.c  transcoding.cpp
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
